feat: :recycle: Refactor mount functionality for products and cart components
Change the mount functionality to render components in specified containers rather than directly on "dev-products" and "dev-cart" elements. This allows better encapsulation and flexibility for rendering components in different containers. It also improves code reusability and maintains a clear separation of concerns. This change addresses the need to decouple the rendering logic from specific element IDs and supports easier integration with other parts of the application.

--- a/container/public/index.html
+++ b/container/public/index.html
@@ -2,8 +2,8 @@
 <html>
   <head></head>
   <body>
-    <div id="dev-products"></div>
+    <div id="products-container"></div>
     <hr />
-    <div id="dev-cart"></div>
+    <div id="cart-container"></div>
   </body>
 </html>
